<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_foot"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/home_page"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_page_iv"
            android:layout_width="44dp"
            android:layout_height="27dp"
            android:background="@mipmap/ic_tab_strip_icon_feed_selected" />

        <TextView
            android:id="@+id/home_page_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_str"
            android:textColor="@color/titlestr"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/attention"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/attention_iv"
            android:layout_width="44dp"
            android:layout_height="27dp"
            android:background="@mipmap/ic_tab_strip_icon_follow" />

        <TextView
            android:id="@+id/attention_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attention_str"
            android:textColor="@color/detailsstr"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inform"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/inform_iv"
            android:layout_width="44dp"
            android:layout_height="27dp"
            android:background="@mipmap/ic_tab_strip_icon_category" />

        <TextView
            android:id="@+id/inform_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inform_str"
            android:textColor="@color/detailsstr"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myself"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/myself_iv"
            android:layout_width="44dp"
            android:layout_height="27dp"
            android:background="@mipmap/ic_tab_strip_icon_profile" />

        <TextView
            android:id="@+id/myself_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myself_str"
            android:textColor="@color/detailsstr"
            android:textSize="12dp" />

    </LinearLayout>
</LinearLayout>