<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/android_lin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/android_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/androidstr"
            android:textColor="@color/titlestr"
            android:typeface="sans" />

        <View
            android:id="@+id/android_line"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_below="@id/android_str"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ios_lin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/ios_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/detailsstr"
            android:text="@string/iosstr"
            android:typeface="sans" />

        <View
            android:id="@+id/ios_line"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_below="@id/ios_str"
            android:background="@color/white"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/front_lin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/front_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/detailsstr"
            android:text="@string/frontstr"
            android:typeface="sans" />

        <View
            android:id="@+id/front_line"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_below="@id/front_str"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>